# osdlp-operator

./: .astylerc  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md  farm_configuration.cfg  fop_configuration.cfg
lib/: CMakeLists.txt
src/: CMakeLists.txt  config.cpp  config.h  farm_inst.cpp  farm_inst.h  fop_inst.cpp  fop_inst.h  logger.cpp  logger.h  main.cpp  mission_config.h  qubik_farm_inst.cpp  qubik_farm_inst.h  qubik_fop_inst.cpp  qubik_fop_inst.h  queue_api.cpp  queue_api.h  virtualchannel.cpp  virtualchannel.h
